# trame-vtklocal

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  http_headers.json  package-lock.json  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish_js_lib.yml  test_and_release.yml
examples/cpp/: README.md  highlight_picked_actor.py
examples/cpp/Addon/: CMakeLists.txt  __init__.py.in
examples/cpp/Addon/Style/: CMakeLists.txt  HighlightPickedActorStyle.cxx  HighlightPickedActorStyle.h  vtk.module
examples/cpp/Addon/WebAssembly/: CMakeLists.txt  vtk.module
examples/cpp/Addon/WebAssemblyAsync/: CMakeLists.txt  vtk.module
examples/demo/: basic.py  custom_interactor_style.py  progress.py  snapshot_viewer.py  vuetify.py  webxr.py  widget.py  widget_clip.py
examples/docker/: Dockerfile  README.md  app.py
examples/docker/setup/: apps.yml  initialize.sh  requirements.txt
examples/issues/: 14.py  76.py  clip_plane.py
examples/pure-js/: .gitignore  README.md  server.py  server_nogui.py
examples/pure-js/client/: eslint.config.js  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
examples/pv/: README.md  cone.py
examples/pyvista/: basic.py  bg_image.py  drap2dsurf.py  eye_dome_lighting.py  glyph.py  isolines.py  issue-33.py  labels.py  linked_view.py  pbr.py  requirements.txt  spline.py  texture.py  widget.py
examples/tests/rendering/: cone.py  flow.py
examples/validation/: camera_jump.py  dispose.py  test_pyvista.py  wasm64_observer.py
examples/vtk/: actor_picker.py  actor_picker2.py  axes_actor.py  ballon.py  borderWidget.py  charts_scatter.py  cone.py  file_viewer.py  flow.py  glyph.py  invoke.py  lut.py  many_actors.py  mapper.json  reload.py  requirements.txt  silhouette.py  volume.py  widgets_box.py  widgets_camera.py  widgets_plane.py  widgets_plane_slice.py
js-lib/: LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.js  vite.config.standalone.js  vite.config.viewer.js
src/trame/modules/: vtklocal.py
src/trame_vtklocal/module/: __init__.py  protocol.py  wasm.py
src/trame_vtklocal/utils/: cli.py  ui.py
src/trame_vtklocal/widgets/: vtklocal.py
tests/: _test_rendering.py  conftest.py  requirements.txt  test_cone.py  test_import.py  test_multi_view.py  test_volume_rendering.py
trame/modules/: vtklocal.py
trame/widgets/: vtklocal.py
trame_vtklocal/: __init__.py
trame_vtklocal/module/: .gitignore  __init__.py  protocol.py  wasm.py
trame_vtklocal/module/serve/wasm/: vtkObjectManager.js  vtkSceneManager-9.3.mjs  vtkWasmSceneManager-9.3.mjs
trame_vtklocal/widgets/: vtklocal.py
utils/: build_vtk.py  build_vtk.sh  dev_environment.ps1  dev_environment.sh
vue-components/: eslint.config.mjs  jsconfig.json  package-lock.json  package.json  vite.config.js
vue-components/src/: core.js  main.js  remote.js  standalone.js  style.css  utils.js  viewer.js  wasmLoader.js
vue-components/src/components/: VtkLocal.js  index.js
vue-components/src/utils/: index.js  vtkObjectManager.js
