[metadata]
name = trame-vtklocal
version = 0.6.4
description = VTK Local Rendering using WASM
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
